--- a/src/app/components/favourites-page/favourites-page.component.html
+++ b/src/app/components/favourites-page/favourites-page.component.html
@@ -22,7 +22,11 @@
   <div class="top-information">
     <p class="top-information__header">Избранное</p>
 
-    <app-coworkings-list *ngFor="let coworking of favourites_coworkings" [coworking]="coworking"></app-coworkings-list>
+    <!-- <app-coworkings-list *ngFor="let coworking of favourites_coworkings" [coworking]="coworking"></app-coworkings-list> -->
+
+    <p class="wait-information">Здесь ведется работа над новым и захватывающим контентом. Мы с нетерпением ждем, чтобы
+      поделиться им с вами!
+      Оставайтесь на связи и скоро вы увидите нашу новую, впечатляющую страницу.</p>
 
   </div>
 </div>
