--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.css
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.css
@@ -44,8 +44,22 @@
     display: flex;
   }
 
-  .top-information img {
+  .photo-container {
+    position: relative;
+    width: 150px;
+    height: 150px;
     margin-right: 42px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+
+  .photo-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .top-information h2 {
@@ -78,7 +92,8 @@
     line-height: 54px;
     letter-spacing: 0em;
     text-align: center;
-    margin-left: 75px;
+    margin-left: 230px;
+    /* Поменял с 75 на 230 */
     color: rgba(27, 31, 59, 0.8);
     width: 560px;
     margin-bottom: 90px;
@@ -87,6 +102,7 @@
   .progress-information__btn {
     cursor: pointer;
     display: flex;
+    font-size: 15px;
     width: 188.49px;
     padding: 13px 28px;
     background: #E0E0D6;
@@ -94,7 +110,7 @@
     border-radius: 10px;
     font-weight: 600;
     color: rgba(27, 31, 59, 0.6);
-    margin: 0 60%;
+    margin-left: 420px;
   }
 
   .about-information {
@@ -354,8 +370,22 @@
     display: flex;
   }
 
-  .top-information img {
+  .photo-container {
+    position: relative;
+    width: calc(0.75*150px);
+    height: 150px;
     margin-right: calc(0.75*42px);
+    border-radius: 50%;
+    overflow: hidden;
+  }
+
+  .photo-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .top-information h2 {
@@ -383,12 +413,12 @@
 
   .progress-information__span {
     display: flex;
-    font-size: 40px;
+    font-size: calc(0.75*40px);
     font-weight: 700;
     line-height: 54px;
     letter-spacing: 0em;
     text-align: center;
-    margin-left: calc(0.75*75px);
+    margin-left: calc(0.75*230px);
     color: rgba(27, 31, 59, 0.8);
     width: calc(0.75*560px);
     margin-bottom: calc(0.83*90px);
@@ -397,6 +427,7 @@
   .progress-information__btn {
     cursor: pointer;
     display: flex;
+    font-size: calc(0.75*15px);
     width: calc(0.75*188.49px);
     padding: calc(0.83*13px) calc(0.75*28px);
     background: #E0E0D6;
@@ -404,7 +435,7 @@
     border-radius: 10px;
     font-weight: 600;
     color: rgba(27, 31, 59, 0.6);
-    margin: 0 60%;
+    margin-left: calc(0.75*420px);
   }
 
   .about-information {
@@ -659,8 +690,22 @@
     display: flex;
   }
 
-  .top-information img {
+  .photo-container {
+    position: relative;
+    width: calc(0.71*150px);
+    height: 150px;
     margin-right: calc(0.71*42px);
+    border-radius: 50%;
+    overflow: hidden;
+  }
+
+  .photo-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .top-information h2 {
@@ -688,12 +733,12 @@
 
   .progress-information__span {
     display: flex;
-    font-size: 40px;
+    font-size: calc(0.75*40px);
     font-weight: 700;
     line-height: 54px;
     letter-spacing: 0em;
     text-align: center;
-    margin-left: calc(0.71*75px);
+    margin-left: calc(0.71*230px);
     color: rgba(27, 31, 59, 0.8);
     width: calc(0.71*560px);
     margin-bottom: calc(0.71*90px);
@@ -702,6 +747,7 @@
   .progress-information__btn {
     cursor: pointer;
     display: flex;
+    font-size: calc(0.71*15px);
     width: calc(0.71*188.49px);
     padding: calc(0.71*13px) calc(0.71*28px);
     background: #E0E0D6;
@@ -709,7 +755,7 @@
     border-radius: 10px;
     font-weight: 600;
     color: rgba(27, 31, 59, 0.6);
-    margin: 0 60%;
+    margin-left: calc(0.71*420px);
   }
 
   .about-information {
