--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.html
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.html
@@ -51,7 +51,8 @@
     </div> -->
 
     <span class="progress-information__span">
-      Добавь ещё одно место и получи подарок
+      <!-- Добавь ещё одно место и получи подарок -->
+      Добавь 5 мест и получи подарок
     </span>
 
     <button class="progress-information__btn" routerLink="/main/add">
