--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.css
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.css
@@ -170,6 +170,7 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
     font-weight: 600;
+    font-size: 15px;
     color: rgba(27, 31, 59, 0.6);
     margin-bottom: 40px;
   }
@@ -340,7 +341,7 @@
   }
 
   .return-to-main span {
-    font-size: 15px;
+    font-size: calc(0.75*15px);
     line-height: 20px;
     color: rgba(27, 31, 59, 0.65);
   }
@@ -357,7 +358,7 @@
   }
 
   .profile-navigation li {
-    font-size: 20px;
+    font-size: calc(0.75*20px);
     line-height: 177.69%;
     margin-bottom: calc(0.83*16px);
   }
@@ -390,13 +391,13 @@
 
   .top-information h2 {
     font-weight: 600;
-    font-size: 34px;
+    font-size: calc(0.75*34px);
     line-height: 177.69%;
     margin-bottom: calc(0.83*10px);
   }
 
   .top-information span {
-    font-size: 20px;
+    font-size: calc(0.75*20px);
     line-height: 177.69%;
   }
 
@@ -450,7 +451,7 @@
   .title {
     font-style: normal;
     font-weight: 700;
-    font-size: 28px;
+    font-size: calc(0.75*28px);
     line-height: 38px;
     color: #000000;
     margin-bottom: calc(0.83*54px);
@@ -464,7 +465,7 @@
     width: calc(0.75*528px);
     height: calc(0.83*57px);
     font-weight: 300;
-    font-size: 15px;
+    font-size: calc(0.75*15px);
     line-height: 28px;
     padding-left: calc(0.75*28px);
     background: #E0E0D6;
@@ -495,6 +496,7 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
     font-weight: 600;
+    font-size: calc(0.75*15px);
     color: rgba(27, 31, 59, 0.6);
     margin-bottom: calc(0.83*40px);
   }
@@ -508,7 +510,7 @@
     width: calc(0.75*1000.5px);
     font-style: normal;
     font-weight: 300;
-    font-size: 22px;
+    font-size: calc(0.75*22px);
     line-height: 177.69%;
     color: #000000;
   }
@@ -558,7 +560,7 @@
   .center span {
     color: #7a7a7a;
     display: block;
-    font-size: 36px;
+    font-size: calc(0.75*36px);
     font-weight: 800;
     left: 50%;
     position: absolute;
@@ -581,7 +583,7 @@
     position: absolute;
     width: 100%;
     font-family: monospace;
-    font-size: 1.5rem;
+    font-size: calc(0.75*1.5rem);
   }
 
   #section1 {
@@ -620,7 +622,7 @@
     line-height: 30px;
     background: #9C5D56;
     color: #fff;
-    font-size: 60%;
+    font-size: calc(0.75*60%);
     border-radius: 50%;
     pointer-events: none;
   }
@@ -660,7 +662,7 @@
   }
 
   .return-to-main span {
-    font-size: 15px;
+    font-size: calc(0.71*15px);
     line-height: 20px;
     color: rgba(27, 31, 59, 0.65);
   }
@@ -677,7 +679,7 @@
   }
 
   .profile-navigation li {
-    font-size: 20px;
+    font-size: calc(0.71*20px);
     line-height: 177.69%;
     margin-bottom: calc(0.71*16px);
   }
@@ -710,13 +712,13 @@
 
   .top-information h2 {
     font-weight: 600;
-    font-size: 34px;
+    font-size: calc(0.71*34px);
     line-height: 177.69%;
     margin-bottom: calc(0.71*10px);
   }
 
   .top-information span {
-    font-size: 20px;
+    font-size: calc(0.71*20px);
     line-height: 177.69%;
   }
 
@@ -733,7 +735,7 @@
 
   .progress-information__span {
     display: flex;
-    font-size: calc(0.75*40px);
+    font-size: calc(0.71*40px);
     font-weight: 700;
     line-height: 54px;
     letter-spacing: 0em;
@@ -770,7 +772,7 @@
   .title {
     font-style: normal;
     font-weight: 700;
-    font-size: 28px;
+    font-size: calc(0.71*28px);
     line-height: 38px;
     color: #000000;
     margin-bottom: calc(0.71*54px);
@@ -784,7 +786,7 @@
     width: calc(0.71*528px);
     height: calc(0.71*57px);
     font-weight: 300;
-    font-size: 15px;
+    font-size: calc(0.71*15px);
     line-height: 28px;
     padding-left: calc(0.71*28px);
     background: #E0E0D6;
@@ -815,6 +817,7 @@
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
     font-weight: 600;
+    font-size: calc(0.71*15px);
     color: rgba(27, 31, 59, 0.6);
     margin-bottom: calc(0.71*40px);
   }
@@ -828,7 +831,7 @@
     width: calc(0.71*1000.5px);
     font-style: normal;
     font-weight: 300;
-    font-size: 22px;
+    font-size: calc(0.71*22px);
     line-height: 177.69%;
     color: #000000;
   }
@@ -878,7 +881,7 @@
   .center span {
     color: #7a7a7a;
     display: block;
-    font-size: 36px;
+    font-size: calc(0.71*36px);
     font-weight: 800;
     left: 50%;
     position: absolute;
@@ -901,7 +904,7 @@
     position: absolute;
     width: 100%;
     font-family: monospace;
-    font-size: 1.5rem;
+    font-size: calc(0.71*1.5rem);
   }
 
   #section1 {
@@ -940,7 +943,7 @@
     line-height: 30px;
     background: #9C5D56;
     color: #fff;
-    font-size: 60%;
+    font-size: calc(0.71*60%);
     border-radius: 50%;
     pointer-events: none;
   }
