--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.html
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.html
@@ -52,7 +52,7 @@
 
     <span class="progress-information__span">
       <!-- Добавь ещё одно место и получи подарок -->
-      Добавь 5 мест и получи подарок
+      Добавь пять мест и получи подарок
     </span>
 
     <button class="progress-information__btn" routerLink="/main/add">
