--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.html
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="user">
   <div class="return-to-main">
     <a routerLink="/">
-      <img src="assets/img/return-button.svg" alt="return-button" class="return-button" width="16" height="16">
+      <img src="assets/img/return-button.svg" alt="return-button" class="return-button">
     </a>
     <span>Вернуться к поиску</span>
   </div>
