--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer-container">
 
   <div class="footer-logo-container">
-    <img src="assets/img/logo.png" alt="logo">
+    <img src="assets/img/logo.png" alt="logo" class="logo">
     <p class="politics">Политика конфиденциальности</p>
     <p>WorkPoint ©2023 Все права защищены</p>
   </div>
@@ -23,7 +23,7 @@
   <ul class="footer-part-three">
     <li class="contacts">Контакты</li>
     <li>Свяжитесь с нами, если у вас есть вопросы</li>
-    <li>Email: example@gmail.com</li>
+    <li>Email: proektwork241@gmail.com</li>
   </ul>
 
 </div>
