--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -81,14 +81,17 @@
   }
 
   .profile-img {
+    position: relative;
     margin-right: 17px;
     width: 80px;
     height: 80px;
+    border-radius: 50%;
+    overflow: hidden;
   }
 
   .profile-img-img {
-    width: 80px;
-    height: 80px;
+    width: 100%;
+    height: 100%;
   }
 
   .profile-name {
