--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,7 +9,8 @@
   </div>
 
   <div class="header-right-side">
-    <button type="button" class="btn-add-coworking" routerLink="/main/add">Добавить место</button>
+    <button type="button" class="btn-add-coworking" (click)="navigateWithDelay('/main/add')">Добавить
+      место</button>
 
     <!-- <button type="button" class="btn-notification">
       <img src="assets/img/notification.svg" alt="notification" class="btn-notification-img">
